objects/SWIFT_Type_Mapping__mdt.object
<CustomObject>
    <description>RN - CloudSmiths - Mapping table for SWIFT message types</description>
    <fields>
        <fullName>AutoAcknowledgement__c</fullName>
        <label>Auto Acknowledgement</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageResponseTypes__c</fullName>
        <description>RN - CloudSmiths - The available allowed  response types for a specific message type</description>
        <inlineHelpText>The available allowed response types for a specific message type. Separate multiple values with a comma -  e.g. 199, 288</inlineHelpText>
        <label>Message Response Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageType__c</fullName>
        <description>RN - CloudSmiths - Type of message that initially generated the payments Case</description>
        <label>Message Type</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SWIFT Type Mapping</label>
    <pluralLabel>SWIFT Type Mappings</pluralLabel>
</CustomObject>